--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Game Shop - A Sua loja de games</title>
+    <title>Brisa Mini Mercado - É prático é rápido é brisa</title>
     <link rel="stylesheet" href="./main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,11 +12,11 @@
 <body>
     <header>
     <div class="container">
-        <h1>Games Shop</h1>
+        <h1>Brisa Mini Mercado</h1>
         <nav>
             <ul>
                 <li>
-                    <a href="#about">Sobre a Loja</a>
+                    <a href="#about">Sobre o Brisa</a>
                 </li>
                 <li>
                     <a href="#contact">Contato</a>
@@ -27,19 +27,21 @@
     </header>
     <section id="about">
         <div class="container">
-            <img class="store-front" src="./loja.jpg" alt="Fachada da Loja Games Shop"/>
+            <img class="store-front" src="./brisa.jpg" alt="Fachada do Brisa Mini Mercado"/>
             <div>
-                <h2>Sobre a loja</h2>
+                <h2>Sobre o Mini Mercado</h2>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe soluta molestiae debitis illo nesciunt accusamus suscipit porro corporis commodi natus adipisci corrupti, iusto molestias aliquam reprehenderit quidem vero ratione necessitatibus?
+                    Desde 2001 distribuindo frutas e verduras para restaurantes e mercados nas praias de Palhoça – SC, em março de 2014, Amarildo Alcibides da Silva recebeu o convite para arrendar o “Sacolão” da Praia da Pinheira, localizado em Palhoça. E convidou seus filhos Ramon Junckes da Silva e Ranieri Junckes da Silva para juntos aceitarem a proposta. Sendo assim, em 10 de março de 2014, a família assumiu o “Sacolão”.
                 </p>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe soluta molestiae debitis illo nesciunt accusamus suscipit porro corporis commodi natus adipisci corrupti, iusto molestias aliquam reprehenderit quidem vero ratione necessitatibus?
-                </p>
+                    Mais tarde, acreditando no potencial do negócio e o êxito obtido motivou Amarildo, Ramon e Ranieri a diversificar e ampliar os negócios. Assim, no início de 2018, decidiram colocar em prática uma ideia que visualizaram em São Paulo, a qual seria o conceito de Mini Mercado, com visual moderno, bons preços, bem localizado, atendimento de qualidade e com um mix menor de produtos, todavia eficiente. Foi assim que em 07 de setembro de 2018, inauguraram o primeiro Brisa Mini Mercado, em São José (SC), mais especificamente no bairro Kobrasol.
+                    <p>
+                        Em 2020, no mês de novembro, inauguramos nossa terceira loja, o Brisa de Campinas e em maio de 2021, o Brisa Itaguaçu, se tornando a nossa quarta loja.
+                    </p>
                 <ul class="brands-list">
-                    <li><img src="nintendo.png" alt="Nintendo"/></li>
-                    <li><img src="xbox.png" alt="Xbox"/></li>
-                    <li><img src="playstation.png" alt="Playstation"/></li>
+                    <li><img src="Padaria.jpg" alt="Padaria"/></li>
+                    <li><img src="Acougue.jpg" alt="Acougue"/></li>
+                    <li><img src="Produtos.jpg" alt="Produtos"/></li>
                 </ul>
             </div>
         </div>
@@ -83,6 +85,18 @@
                     <p>
                         Rua Aderbal Ramos da Silva, 981, Pinheira - Palhoça - SC
                     </p>
+                    <p>
+                        R. Adhemar da Silva 555, Kobrasol - São José - SC 
+                    </p>
+                    <p>
+                        Avenida Marechal Castelo Branco 247, Campinas - São José - SC 
+                    </p>
+                    <p>
+                        R. Geroncio Thieves 1079, Shopping Itaguaçu - São José - SC 
+                    </p>
+                    <p>
+                        Avenida Cruz e Souza 530, Campinas - São José - SC 
+                    </p>
                 </div>
             </div>
         </div>
@@ -90,7 +104,7 @@
     <footer>
         <div class="container">
             <p>
-                &copy; Games Shop - Todos os direitos reservados - 2024
+                &copy; Brisa Mini Mercado - É pratico, é rapido, é brisa - Todos os Direitos Reservados - 2024
             </p>
         </div>
     </footer>
